@@ -384,7 +384,7 @@ class PGDialect(default.DefaultDialect):
         if isinstance(e, self.dbapi.OperationalError):
             return 'closed the connection' in str(e) or 'connection not open' in str(e)
         elif isinstance(e, self.dbapi.InterfaceError):
-            return 'connection already closed' in str(e)
+            return 'connection already closed' in str(e) or 'cursor already closed' in str(e)
         elif isinstance(e, self.dbapi.ProgrammingError):
             # yes, it really says "losed", not "closed"
             return "losed the connection unexpectedly" in str(e)
